# bruno-launcher

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
docs/: LOGIN-MICROSOFT.md
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: content.rs  error.rs  instances.rs  lib.rs  main.rs  msauth.rs  settings.rs  skins.rs  state.rs
src-tauri/src/minecraft/: download.rs  forge.rs  java.rs  launch.rs  loader.rs  manifest.rs  mod.rs
src-tauri/tests/: common-controls-v6.manifest  e2e_launch.rs
src/api/: backend.ts  modrinth.ts
src/components/: CreateInstanceModal.vue  InstallModal.vue  InstanceIcon.vue  ProgressPanel.vue  ProjectCard.vue  SkinFace.vue  SkinViewer3D.vue
src/pages/: BrowsePage.vue  HomePage.vue  InstancePage.vue  LibraryPage.vue  ProjectPage.vue  SettingsPage.vue  SkinsPage.vue
src/stores/: launcher.ts
src/styles/: theme.css
