[package]
name = "modrinth-replica"
version = "0.1.0"
description = "Réplica do Modrinth App para aprendizado"
authors = ["Bruno"]
edition = "2021"

[lib]
name = "modrinth_replica_lib"
# Apenas rlib: alvo desktop (staticlib/cdylib são para mobile e quebram
# os testes de integração no Windows com STATUS_ENTRYPOINT_NOT_FOUND)
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "fs", "sync"] }
futures = "0.3"
thiserror = "2"
sha1 = "0.10"
hex = "0.4"
md5 = "0.7"
zip = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
